@@ -32,7 +32,7 @@ _actions = [
     "previousmenu"      , "Previous Menu",
     "info"              , "Show Info",
     "contextmenu"       , "Context Menu",
-    "menu"              , "Menu",    
+    "menu"              , "Menu",
     "firstpage"         , "First Page",
     "lastpage"          , "Last Page",
     "nextletter"        , "Next Letter",
@@ -68,6 +68,8 @@ _actions = [
     "playercontrol(random)"   , "Toggle Random",
     "playercontrol(randomon)" , "Random On",
     "playercontrol(randomoff)", "Random Off",
+    "playercontrol(tempoup)"  , "Playback Speed Faster",
+    "playercontrol(tempodown)", "Playback Speed Slower",
     "createbookmark"          , "Create Bookmark",
     "createepisodebookmark"   , "Create Episode Bookmark",
     "togglestereomode"        , "Toggle 3D/Stereoscopic mode",
@@ -107,6 +109,8 @@ _actions = [
   ["Subtitle", [
     "showsubtitles"     , "Show Subtitles",
     "nextsubtitle"      , "Next Subtitle",
+    "browsesubtitle"    , "Browse Subtitle",
+    "cyclesubtitle"     , "Cycle Subtitle",
     "subtitledelay"     , "Delay",
     "subtitledelayminus", "Delay Minus",
     "subtitledelayplus" , "Delay Plus",
@@ -120,7 +124,13 @@ _actions = [
     "channeldown"           , "Channel Down",
     "previouschannelgroup"  , "Previous channel group",
     "nextchannelgroup"      , "Next channel group",
+	"playpvr"          	    , "PVR Play",
+    "playpvrtv"		    , "PVR Play TV",
+    "playpvrradio"	    , "PVR Play Radio",
     "record"                , "Record",
+    "togglecommskip"		    , "Toggle Commskip",
+	  "showtimerrule"			    , "PVR Show Timer Rule"
+	  "channelnumberseparator" ,"Channel Number Separator",
   ]],
 
   ["Item Actions", [
@@ -175,7 +185,8 @@ _actions = [
     "updatelibrary(music)", "Update Music Library",
     "cleanlibrary(video)",  "Clean Video Library",
     "cleanlibrary(music)", "Clean Music Library",
-    "codecinfo"         , "Show codec info",
+    "codecinfo"         , "Show Player process info",
+    "playerdebug"       , "Player debug",
     "screenshot"        , "Take screenshot",
     "reloadkeymaps"     , "Reload keymaps",
     "increasepar"       , "Increase PAR",
@@ -402,7 +413,7 @@ def _get_action_dict():
         category = elem[0]
         actions = elem[1][0::2]
         names = elem[1][1::2]
-        d[category] = OrderedDict(zip(actions, names))
+        d[category] = OrderedDict(list(zip(actions, names)))
 
     d["Windows"] = _get_activate_window_actions()
     d["Add-ons"] = _get_run_addon_actions()
@@ -410,4 +421,4 @@ def _get_action_dict():
 
 
 ACTIONS = _get_action_dict()
-WINDOWS = OrderedDict(zip(_windows[0::2], _windows[1::2]))
+WINDOWS = OrderedDict(list(zip(_windows[0::2], _windows[1::2])))
