@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="script.keymap"
        name="Keymap Editor"
-       version="1.0.10"
+       version="1.0.11"
        provider-name="takoi">
     <requires>
-        <import addon="xbmc.python" version="2.19.0"/>
+        <import addon="xbmc.python" version="3.0.0"/>
     </requires>
     <extension point="xbmc.python.script" library="main.py"/>
     <extension point="xbmc.addon.metadata">
         <summary lang="en">An editor for keymap files</summary>
-		<summary lang="bg">Редактор на клавишните настройки</summary>
         <description lang="en">Keymap Editor is a GUI for configuring mappings for remotes, keyboard and other inputs supported by xbmc. Note: existing user defined key mappings will be removed.</description>
-		<description lang="bg">Редактор на клавишните настройки, с графичен интерфейс, за коригиране на съответните файлове на дистанционни, клавиатури и други входни устройства, който се поддържат от Kodi. Забележка: съществуващите настройки, дефинирани от потребителя, ще бъдат изтрити!</description>
         <platform>all</platform>
         <language/>
         <license>GNU GENERAL PUBLIC LICENSE. Version 3, 29 June 2007</license>
